fix(jump-to-top): align arrow correctly

--- a/src/assets/core.css
+++ b/src/assets/core.css
@@ -10,3 +10,14 @@
 html {
   box-sizing: border-box;
 }
+
+.a11y-sr-only {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
